crates/compylr-host-python/tests/snapshots/fixtures__classes.py.snap
---
source: tests/fixtures.rs
assertion_line: 52
expression: functions
---
[
    Function {
        name: "build",
        params: [
            Param {
                name: "start",
                ty: Int,
            },
        ],
        ret: Instance(
            "Counter",
        ),
        body: [
            Bind {
                name: "c",
                ty: Instance(
                    "Counter",
                ),
                value: Construct {
                    class: "Counter",
                    args: [
                        Name(
                            "start",
                        ),
                    ],
                },
            },
            Effect(
                MethodCall {
                    receiver: Name(
                        "c",
                    ),
                    class: Some(
                        "Counter",
                    ),
                    method: "bump",
                    args: [
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                    ],
                },
            ),
            Return(
                Name(
                    "c",
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 741,
            end: 824,
        },
    },
    Function {
        name: "read",
        params: [
            Param {
                name: "c",
                ty: Instance(
                    "Counter",
                ),
            },
        ],
        ret: Int,
        body: [
            Return(
                Attribute {
                    object: Name(
                        "c",
                    ),
                    name: "count",
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 827,
            end: 874,
        },
    },
]
