crates/compylr-host-python/tests/snapshots/fixtures__collections.py.snap
---
source: crates/compylr-host-python/tests/fixtures.rs
expression: functions
---
[
    Function {
        name: "first_and_count",
        params: [
            Param {
                name: "xs",
                ty: List(
                    Int,
                ),
            },
        ],
        ret: Int,
        body: [
            Bind {
                name: "first",
                ty: Int,
                value: Subscript {
                    base: Name(
                        "xs",
                    ),
                    index: Literal(
                        Int(
                            0,
                        ),
                    ),
                    origin: FromEitherEnd,
                    checked: Reported,
                },
            },
            Bind {
                name: "count",
                ty: Int,
                value: Len {
                    value: Name(
                        "xs",
                    ),
                    units: CodePoints,
                },
            },
            Return(
                Binary {
                    op: Add {
                        checked: Reported,
                    },
                    left: Name(
                        "first",
                    ),
                    right: Name(
                        "count",
                    ),
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 321,
            end: 426,
        },
    },
    Function {
        name: "lookup",
        params: [
            Param {
                name: "d",
                ty: Dict(
                    Str,
                    Int,
                ),
            },
            Param {
                name: "key",
                ty: Str,
            },
        ],
        ret: Int,
        body: [
            Return(
                Subscript {
                    base: Name(
                        "d",
                    ),
                    index: Name(
                        "key",
                    ),
                    origin: FromEitherEnd,
                    checked: Reported,
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 429,
            end: 494,
        },
    },
    Function {
        name: "build_list",
        params: [],
        ret: List(
            Int,
        ),
        body: [
            Bind {
                name: "xs",
                ty: List(
                    Int,
                ),
                value: ListLit(
                    [
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                        Literal(
                            Int(
                                3,
                            ),
                        ),
                    ],
                ),
            },
            Return(
                Name(
                    "xs",
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 497,
            end: 560,
        },
    },
    Function {
        name: "mapping",
        params: [],
        ret: Dict(
            Str,
            Int,
        ),
        body: [
            Return(
                DictLit(
                    [
                        (
                            Literal(
                                Str(
                                    "a",
                                ),
                            ),
                            Literal(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        (
                            Literal(
                                Str(
                                    "b",
                                ),
                            ),
                            Literal(
                                Int(
                                    2,
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 563,
            end: 623,
        },
    },
    Function {
        name: "unique",
        params: [],
        ret: Set(
            Int,
        ),
        body: [
            Return(
                SetLit(
                    [
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 626,
            end: 672,
        },
    },
    Function {
        name: "pair",
        params: [],
        ret: Str,
        body: [
            Bind {
                name: "t",
                ty: Tuple(
                    [
                        Int,
                        Str,
                    ],
                ),
                value: TupleLit(
                    [
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Str(
                                "a",
                            ),
                        ),
                    ],
                ),
            },
            Return(
                TupleIndex {
                    base: Name(
                        "t",
                    ),
                    position: 1,
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 675,
            end: 726,
        },
    },
    Function {
        name: "nested",
        params: [
            Param {
                name: "d",
                ty: Dict(
                    Str,
                    List(
                        Int,
                    ),
                ),
            },
            Param {
                name: "key",
                ty: Str,
            },
        ],
        ret: Int,
        body: [
            Bind {
                name: "inner",
                ty: List(
                    Int,
                ),
                value: Subscript {
                    base: Name(
                        "d",
                    ),
                    index: Name(
                        "key",
                    ),
                    origin: FromEitherEnd,
                    checked: Reported,
                },
            },
            Return(
                Subscript {
                    base: Name(
                        "inner",
                    ),
                    index: Literal(
                        Int(
                            0,
                        ),
                    ),
                    origin: FromEitherEnd,
                    checked: Reported,
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 729,
            end: 821,
        },
    },
    Function {
        name: "from_end",
        params: [
            Param {
                name: "xs",
                ty: List(
                    Int,
                ),
            },
        ],
        ret: Int,
        body: [
            Return(
                Subscript {
                    base: Name(
                        "xs",
                    ),
                    index: Neg {
                        value: Literal(
                            Int(
                                1,
                            ),
                        ),
                        checked: Reported,
                    },
                    origin: FromEitherEnd,
                    checked: Reported,
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 824,
            end: 877,
        },
    },
    Function {
        name: "characters",
        params: [
            Param {
                name: "s",
                ty: Str,
            },
        ],
        ret: Int,
        body: [
            Return(
                Len {
                    value: Name(
                        "s",
                    ),
                    units: CodePoints,
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 880,
            end: 928,
        },
    },
]
