crates/compylr-host-python/tests/snapshots/fixtures__default_behavior_fixture_fingerprints_are_stable.snap
---
source: crates/compylr-host-python/tests/fixtures.rs
expression: fingerprints
---
{
    "aliases.py": 10430609001990650389,
    "arithmetic.py": 7145520795627120144,
    "branching.py": 12025405463079166353,
    "call_inference.py": 10402600767043764254,
    "calls.py": 6504826097424845430,
    "classes.py": 16920102540058030421,
    "collections.py": 2844508450730458866,
    "comparisons.py": 9241711548481141325,
    "cross_source_callee.py": 2168332357592289600,
    "cross_source_caller.py": 16182727810551881769,
    "division.py": 4014945203581518252,
    "documented.py": 8681930194772724117,
    "floats.py": 9081894048693763862,
    "inference.py": 13077544105695132754,
    "loops.py": 14636331243326064379,
    "mutation.py": 14422200822009538794,
    "nested_mutation.py": 9161495373364961638,
    "reassignment.py": 12891621180096163777,
}
