crates/compylr-host-python/tests/snapshots/fixtures__division.py.snap
---
source: tests/fixtures.rs
expression: functions
---
[
    Function {
        name: "ratio",
        params: [
            Param {
                name: "a",
                ty: Int,
            },
            Param {
                name: "b",
                ty: Int,
            },
        ],
        ret: Float,
        body: [
            Return(
                Binary {
                    op: Div {
                        mode: Exact,
                        checked: Reported,
                    },
                    left: ToFloat(
                        Name(
                            "a",
                        ),
                    ),
                    right: ToFloat(
                        Name(
                            "b",
                        ),
                    ),
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 0,
            end: 52,
        },
    },
    Function {
        name: "halves",
        params: [
            Param {
                name: "a",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Binary {
                    op: Div {
                        mode: Integer(
                            TowardNegInf,
                        ),
                        checked: Reported,
                    },
                    left: Name(
                        "a",
                    ),
                    right: Literal(
                        Int(
                            2,
                        ),
                    ),
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 55,
            end: 99,
        },
    },
    Function {
        name: "remainder",
        params: [
            Param {
                name: "a",
                ty: Int,
            },
            Param {
                name: "b",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Binary {
                    op: Rem {
                        sign: Divisor,
                        checked: Reported,
                    },
                    left: Name(
                        "a",
                    ),
                    right: Name(
                        "b",
                    ),
                },
            ),
        ],
        doc: None,
        span: Span {
            start: 102,
            end: 156,
        },
    },
]
